Changing some html

--- a/public/public/index.html
+++ b/public/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Epoch</title>
+    <title>Furnace</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Epoch</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Furnace</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Epoch is taking exploration to new altitudes</h1>
+                <h1>Furnace is taking exploration to new altitudes</h1>
                 <hr>
                 <p>A revolutionary new way to explore the world around you, meet new people, and earn awesome prizes.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Geocaching to the extreme</h2>
                     <hr class="light">
-                    <p class="text-faded">Epoch is a mobile game that allows users to track down the position of satellites at various geographic landmarks to earn rewards. <br><br> That's right. You can track down motherfucking satellites.</p>
+                    <p class="text-faded">Furnace is a mobile game that allows users to track down the position of satellites at various geographic landmarks to earn rewards. <br><br> That's right. You can track down motherfucking satellites.</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
